--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = csc2005z.settings
+default = crawler.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = csc2005z
+project = crawler
