--- a/inspect_out/Cargo.toml
+++ b/inspect_out/Cargo.toml
@@ -10,3 +10,5 @@ serde_json = "1.0.85"
 clap = { version = "4.0.2", features = ["derive"] }
 anyhow = "1.0.65"
 itertools = "0.10.5"
+rayon = "1.5.3"
+dashmap = "5.4.0"
